states outline rendered

--- a/src/sample_force.html
+++ b/src/sample_force.html
@@ -1,3 +1,5 @@
+<!-- a sandbox to play around with different examples -->
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -52,8 +54,6 @@
             d = {id: i, radius: r, cx: width/2+Math.random()*150-75, cy: height/2+Math.random()*150-75};
       return d;
     });
-
-    console.log(nodes)
 
     // d.x vs d.cx is absolute vs. relative location or relative vs absolute, not sure
     // we're setting each node's absolute location to its relative location or vice versa
